Ranch: Fix menu on small-width windows

--- a/ui/ranch.css
+++ b/ui/ranch.css
@@ -6,6 +6,7 @@
 
 #nav {
     width: 20%;
+    min-width: 250px;
 }
 
 #message-bar {
